Добавил мем и параграф

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
               >github.com/dmitriyKosterev-qa</a
             >
           </li>
+        </li>
+        <li class="links__link"></li>
+        <p class="links__title">QA Engineer</p>
+        <img src="mem.png" alt="avatar" class="header__avatar" />
+      </li>
         </ul>
     </main>
     <footer>
